--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="top__header">
             <div class="logo">
-                <span>2kzz__</span>
+                <span>26kz__</span>
             </div>
             <nav>
                 <ul>
